Fix side scroll on mobile sponsors page.

--- a/static/css/apps/sponsors.less
+++ b/static/css/apps/sponsors.less
@@ -142,6 +142,12 @@
 
     }
 
+    .sponsors-list {
+        .grid {
+            margin: 0;
+        }
+    }
+
     .sponsor-col {
         width: 100%;
     }
